Open up some modules so tests still pass.