@@ -11,3 +11,9 @@ dependencies {
 
 	testImplementation(projects.test.internal)
 }
+
+tasks.named<Test>("test") {
+	// TODEL Java 16 vs Gradle 7+ https://github.com/gradle/gradle/issues/18647
+	// Example test: TaskExtensionsKtTest.`task provider was launched without qualification`
+	jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+}
